syntax = "proto3";
option go_package = ".;proto";

message Empty{

}

message RespRoomList{
    repeated int32 roomIds = 1;
}

message ReqJoinRoom{
    int32 RoomId = 1;
}

message RespJoinRoom{
    int32 RoomId = 1;
    repeated int32 UserIds = 2;
}

message Send {
    int32 uid = 1;
    string data = 2;
    int32 room = 3;
}